adds and changes views

--- a/app/views/employs/edit.html.erb
+++ b/app/views/employs/edit.html.erb
@@ -1,10 +1,4 @@
-<h1>Editing employ</h1>
-
-<%= render "form", employ: @employ %>
-
-<br>
-
-<div>
-  <%= link_to "Show this employ", @employ %> |
-  <%= link_to "Back to employs", employs_path %>
+<h1 class="text-2xl font-semibold tracking-tight">Edit employee</h1>
+<div class="mt-6">
+  <%= render "form", employ: @employ %>
 </div>
