--- a/app/views/employs/new.html.erb
+++ b/app/views/employs/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New employ</h1>
-
-<%= render "form", employ: @employ %>
-
-<br>
-
-<div>
-  <%= link_to "Back to employs", employs_path %>
+<h1 class="text-2xl font-semibold tracking-tight">New employee</h1>
+<div class="mt-6">
+  <%= render "form", employ: @employ %>
 </div>
