--- a/app/views/employs/index.html.erb
+++ b/app/views/employs/index.html.erb
@@ -31,6 +31,10 @@
             <%= employee.gender %>
           </td>
 
+          <td class="px-4 py-3 text-sm text-gray-600">
+            <%= link_to "Employee Details", employee_details_path %>
+          </td>  
+
           <td class="px-4 py-3 text-right text-sm">
             <div class="flex justify-end gap-2">
               <%= link_to "Edit", edit_employ_path(employee),
@@ -45,6 +49,8 @@
       <% end %>
     </tbody>
   </table>
+
+
 
   <%= paginate @employs %>
 
