--- a/app/views/employee_details/new.html.erb
+++ b/app/views/employee_details/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to employee details", employee_details_path %>
+  <%= link_to "Back to employee details", new_employ_employee_detail_path %>
 </div>
