--- a/app/views/employs/index.html.erb
+++ b/app/views/employs/index.html.erb
@@ -32,7 +32,8 @@
           </td>
 
           <td class="px-4 py-3 text-sm text-gray-600">
-            <%= link_to "Employee Details", employee_details_path %>
+            <%= link_to "Employee Details", employ_employee_details_path(employee), class: "text-sm font-medium text-gray-700 hover:text-gray-900" %>
+
           </td>  
 
           <td class="px-4 py-3 text-right text-sm">
