--- a/app/views/employee_details/edit.html.erb
+++ b/app/views/employee_details/edit.html.erb
@@ -6,5 +6,5 @@
 
 <div>
   <%= link_to "Show this employee detail", @employee_detail %> |
-  <%= link_to "Back to employee details", employee_details_path %>
+  <%= link_to "Back to employee details", edit_employ_employee_detail_path %>
 </div>
