--- a/app/views/employee_details/index.html.erb
+++ b/app/views/employee_details/index.html.erb
@@ -6,9 +6,11 @@
   <% @employee_details.each do |employee_detail| %>
     <%= render employee_detail %>
     <p>
-      <%= link_to "Show this employee detail", employee_detail %>
+      <%= link_to "Show this employee detail",
+    employ_employee_detail_path(employee_detail.employ, employee_detail),
+    class: "text-sm font-medium text-gray-700 hover:text-gray-900" %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New employee detail", new_employee_detail_path %>
+<%= link_to "New employee detail", new_employ_employee_detail_path %>
